<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/filterLabel" />

    <CheckBox
        android:id="@+id/filterVehicleCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/filterVehicles" />

    <LinearLayout
        android:id="@+id/filterVehicleSubFilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filterVehiclesModel"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/filterVehicleModelSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filterVehiclesStatus"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/filterVehicleStatusSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/filterParkingCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/filterParkings" />

    <CheckBox
        android:id="@+id/filterChargerCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/filterCharges" />

    <CheckBox
        android:id="@+id/filterPoiCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/filterPois" />

    <CheckBox
        android:id="@+id/filterZoneCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/filterZones" />
</LinearLayout>
